--- a/hackathon/pom.xml
+++ b/hackathon/pom.xml
@@ -136,7 +136,7 @@
                     <configuration>
                         <url>http://localhost:8080/manager/text</url>
                         <server>tomcat</server>
-                        <path>/rrr</path>
+                        <path>/annacasa</path>
                     </configuration>
                 </plugin>
             </plugins>
